# fiveCppProjects

./: AddStudents.cpp  Book.cpp  Book.h  BookManagement.cpp  CMakeLists.txt  Student.cpp  StudentManager.h  Task.cpp  Task.h  TaskSource.cpp  books.csv  books.txt  fiveProjects.sln  fiveProjects.vcxproj  fiveProjects.vcxproj.filters  main.cpp  students.txt  tasks.txt
include/: Student.h
src/: Student.cpp
